// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-console ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 12,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 2 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 13,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 3 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 12,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 4 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 15,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 5 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 6 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 15,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 7 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 8 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 19,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 9 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 10 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 11 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 23,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 12 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 17,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 13 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 13,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 14 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 13,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 15 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 16,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 16 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 16,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;

exports[`no-console ошибки индекс теста: 17 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected console statement.",
    "messageId": "unexpected",
    "nodeType": "MemberExpression",
    "ruleId": "no-console",
    "severity": 2,
  },
]
`;
